asset/Deployment/K8/Ingress/tito-sql-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: titosql
  labels:
    name: tito-sql
    version: "1.5"
    app: tito
    stage: dev
    tiers: tito-sql
spec:
  containers:
    - name: tito-sql
      image: vmeoc/tito-sql:V1.5
      ports:
      - containerPort: 3306
